# trimult

./: .gitignore  CMakeLists.txt  README.md  main.cpp
tetgen/: CMakeLists.txt
trimult/: Boundary.cpp  Boundary.h  CMakeLists.txt  Configure.h  CurveInfo.cpp  CurveInfo.h  DMWT.cpp  DMWT.h  EdgeInfo.cpp  EdgeInfo.h  Hole.cpp  Hole.h  SubKey.h  Tile.h  TriangleInfo.cpp  TriangleInfo.h  Vector3.cpp  Vector3.h
